--- a/manual/example.html
+++ b/manual/example.html
@@ -76,7 +76,13 @@
     <span>&#xBB;</span>
     <span data-ice="title">Example</span>
   </div>
-  
+  <div data-ice="content"><p>See Python&apos;s docs:</p>
+<ul>
+<li><a href="https://docs.python.org/3.6/library/collections.html">collections</a></li>
+<li><a href="https://docs.python.org/3.6/library/heapq.html">heapq</a></li>
+<li><a href="https://docs.python.org/3.6/library/bisect.html">bisect</a></li>
+</ul>
+</div>
 </div>
 </div>
 
